// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> should render correctly, when notes are existing 1`] = `
<DragDropContext
  onDragEnd={[Function]}
>
  <div
    className="container"
  >
    <ActionBar
      noteCreationAllowed={true}
      onCreateNote={[Function]}
      onDeleteNote={[Function]}
    />
    <div
      className="row py-1 no-gutters"
      style={
        Object {
          "height": "450px",
        }
      }
    >
      <NoteSelector
        notes={
          Array [
            Object {
              "body": "This is a note.",
              "id": 5,
            },
          ]
        }
        selectedId={null}
      />
      <div
        className="col-8 pl-1"
      >
        <TextEditor
          noNoteMessage="Please select a note to display it."
          note={Object {}}
          onUpdateNote={[Function]}
          placeholder="Write your notes in here..."
        />
      </div>
    </div>
  </div>
</DragDropContext>
`;

exports[`<App/> should render correctly, when there are no notes 1`] = `
<DragDropContext
  onDragEnd={[Function]}
>
  <div
    className="container"
  >
    <ActionBar
      noteCreationAllowed={true}
      onCreateNote={[Function]}
      onDeleteNote={[Function]}
    />
    <div
      className="row py-1 no-gutters"
      style={
        Object {
          "height": "450px",
        }
      }
    >
      <NoteSelector
        notes={Array []}
        selectedId={null}
      />
      <div
        className="col-8 pl-1"
      >
        <TextEditor
          noNoteMessage="Create a new note by clicking the 'New Note' Button"
          note={Object {}}
          onUpdateNote={[Function]}
          placeholder="Write your notes in here..."
        />
      </div>
    </div>
  </div>
</DragDropContext>
`;
